TestSuite/errors/err0078.pas

  	 type TFunc4 = function(params a : array of integer; params a : array of real) : integer;

begin

end.